--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "declaration-is": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "declaration-is"
+    }
+  },
+  "defaultProject": "declaration-is",
+  "cli": {
+    "analytics": "3997ae69-1aba-4e65-9772-cb84bf256f4b"
+  }
 }
